fixed letter spacing

--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -33,7 +33,7 @@
            }
            .lead{
                line-height: 24px;
-               letter-spacing: 1.5px;
+               letter-spacing: 1px;
                color: #eee;
             //    font-size: 16px ;
                @include mobile{
