--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -16,6 +16,7 @@ body {
   }
   *{
       transition: all 0.5s ease-in-out;
+      letter-spacing: 1px;
   }
   img{
     width: 100%;
